[package]
name = "vaptcha"
version = "0.1.0"
authors = ["yixinin <yixinin@outlook.com>"]

[dependencies]  
time = "0.1.40"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.20"
reqwest = "0.8.6"  
sha1 = "0.6.0"
rustc-serialize = "0.3.24" 
md5 = "0.3.7" 
[package.metadata.docs.rs]
all-features = true


[lib]
name = "vaptcha"
path = "src/lib.rs"